Update and rename index.html to Mapindex.html

--- a/Mapindex.html
+++ b/Mapindex.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>[Project Name] Project Timeline</title>
+	<title>[Project Name] Project Timeline for Painting Website</title>
 	<meta name="viewport" content="width=device-width" />
 	<link rel="stylesheet" type="text/css" href="css/style.css" media="all" />
 </head>
@@ -10,8 +10,10 @@
 	<h1>[Project Name] Project Timeline</h1>
 	<ol class="timeline">
 		<li class="tl-node">
-			<div class="tl-stamp">August 14th, 2013</div>
-			<div class="tl-content">Kickoff Meeting</div>
+			<div class="tl-stamp">September 6, 2015</div>
+			<div class="tl-content">Sketch, Sitemap, HTML wireframes, Style Tiles </div>
+			<div class="tl-content">Sitemap</div>
+			<div class="tl-content">Style tiles</div>
 			<a href="#">View notes</a>
 		</li>
 		<li class="tl-node">
